配置信息改动